fixed emotiontitle overlap

--- a/src/css/variablesCustom.css
+++ b/src/css/variablesCustom.css
@@ -11,4 +11,6 @@
   --color-hover: #26b4e9;
   --color-secondary: #0066cc;
   --picture-scale-up-img-width: auto;
+  --emotion-pictures-with-title-bg-line-height-secondary-custom: normal;
+
 }
